--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expensify-React</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Expensify</title>
   <link rel="icon" type="image/png" href="/images/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/dist//styles.css" />
+  <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
 
 <body>
-
   <div id="app"></div>
-
-  <script type="text/javascript" src="/dist/bundle.js"> </script>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
